--- a/debian/control
+++ b/debian/control
@@ -24,7 +24,7 @@ Vcs-Git: https://github.com/mborgerson/xemu.git
 Package: xemu
 Architecture: amd64 arm arm64 armel armhf i386 ia64 kfreebsd-amd64 kfreebsd-i386 mips mipsel mips64 mips64el powerpc powerpcspe ppc64 ppc64el riscv64 s390x sparc sparc64 x32
 Multi-Arch: foreign
-Depends: ${shlibs:Depends}, ${misc:Depends}, cpu-checker
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Provides: xemu
 Description: Original Xbox emulator
  An open-source, cross-platform application that emulates the hardware of the
